search input added

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
 <body>
   <div class="icons__wrapper">
     <div class="search__wrapper">
-      <i class="fas fa-search"></i>
+      <input type="checkbox" id="site-search" class="visually-hidden" checked>
+      <input type="search" class="search">
+      <label for="site-search"><i class="fas fa-search"></i></label>
     </div>
     <ul class="menu__wrapper">
       <i class="fas fa-bars"></i>
@@ -140,6 +142,24 @@
               </div>
               <div class="swiper-item__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Accusamus ea quod quas voluptas non, tempore atque, 
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Accusamus ea quod quas voluptas non, tempore atque, 
+                 quisquam delectus iure libero possimus quaerat quis
+                 dolor ratione. Debitis dolorum inventore cupiditate molestias..
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Accusamus ea quod quas voluptas non, tempore atque, 
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Accusamus ea quod quas voluptas non, tempore atque, 
+                 quisquam delectus iure libero possimus quaerat quis
+                 dolor ratione. Debitis dolorum inventore cupiditate molestias..
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Accusamus ea quod quas voluptas non, tempore atque, 
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Accusamus ea quod quas voluptas non, tempore atque, 
+                 quisquam delectus iure libero possimus quaerat quis
+                 dolor ratione. Debitis dolorum inventore cupiditate molestias..
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                  Accusamus ea quod quas voluptas non, tempore atque, 
                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
                  Accusamus ea quod quas voluptas non, tempore atque, 
@@ -272,7 +292,7 @@
         <form action="/test" method="POST" class="form" id="form1">
           <input type="text" placeholder="Name" class="input-name">
           <select name="location-select" id="location-select" placeholder="Location" > 
-            <option label="Location" ></option>
+            <option label="Location" selected disabled></option>
             <option value="address1">Address 1</option>
             <option value="address2">Address 2</option>
           </select>
