some media queries addd

--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
       <div class="location__content">
         <div class="location__map">
           <iframe class="ifame"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2431.850629772266!2d-116.16608753805632!3d43.54458985452408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef7cfb2d36b6f%3A0x2b5413d0a451ab39!2sThe%20TK%20Bar!5e0!3m2!1sru!2sby!4v1621440418870!5m2!1sru!2sby">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2431.850629772266!2d-116.16608753805632!3d43.54458985452408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef7cfb2d36b6f%3A0x2b5413d0a451ab39!2sThe%20TK%20Bar!5e0!3m2!1sru!2sby!4v1621440418870!5m2!1sru!2sby" loading="lazy" >
           </iframe>
         </div>
         <div class="item__inner">
