--- a/src/index.html
+++ b/src/index.html
@@ -352,6 +352,9 @@
           <a href="" class="join-program__link">Be our partner and join our partner programs</a>
     </div>
   </footer>
+  <button class="toTop">
+    <i class="fas fa-angle-up"></i>
+  </button>
 </body>
 
 </html>
