--- a/src/index.html
+++ b/src/index.html
@@ -352,7 +352,7 @@
           <a href="" class="join-program__link">Be our partner and join our partner programs</a>
     </div>
   </footer>
-  <button class="toTop">
+  <button class="scrollBtn">
     <i class="fas fa-angle-up"></i>
   </button>
 </body>
