text size changes and media perform

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,14 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  
   <title>Empat Belas</title>
   <script src="./js/main.js" defer></script>
   <script src="https://kit.fontawesome.com/b1cf813757.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
 </head>
-
 <body>
   <div class="icons__wrapper">
     <div class="search__wrapper">
@@ -248,7 +244,7 @@
       <div class="location__content">
         <div class="location__map">
           <iframe class="ifame"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2431.850629772266!2d-116.16608753805632!3d43.54458985452408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef7cfb2d36b6f%3A0x2b5413d0a451ab39!2sThe%20TK%20Bar!5e0!3m2!1sru!2sby!4v1621440418870!5m2!1sru!2sby" loading="lazy" >
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2431.850629772266!2d-116.16608753805632!3d43.54458985452408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aef7cfb2d36b6f%3A0x2b5413d0a451ab39!2sThe%20TK%20Bar!5e0!3m2!1sru!2sby!4v1621440418870!5m2!1sru!2sby" loading="lazy" crossorigin="anonymous">
           </iframe>
         </div>
         <div class="item__inner">
@@ -299,7 +295,7 @@
           <input type="date" placeholder="Date">
           <input type="time" placeholder="Time" min="07:00" max="16:00" step="3600" Value="07:00">
         </form>
-        <button type="submit" class="top__button" form="form1">
+        <button type="submit" class="top__button " form="form1">
           <p>book now </p>
           <span class="material-icons"> 
             east  
@@ -356,5 +352,4 @@
     <i class="fas fa-angle-up"></i>
   </button>
 </body>
-
 </html>
