optimized to screens

--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,12 @@
       </div>
     </div>
   </main>
-  <article id="our-story">
+  <article>
     <div class="container">
       <div class="two-column__wrapper">
         <div class="column">
           <div class="column__image">
-            <img src="./img/image-top.png" alt="donut with chocolate">
+            <img src="./img/image-top.png" alt="donut with chocolate" id="our-story">
           </div>
           @@include('./partials/about__item/_about__item.html',
             {"flowDireciton":"",
